// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> it render with disable margin left 1`] = `
<ul
  className="mfui-list mfui-list_disable-left-margin mfui-list_color_black mfui-list_weight_regular"
>
  <ListItem
    disableLeftMargin={true}
  />
</ul>
`;

exports[`<List /> it renders List 1`] = `
<ul
  className="mfui-list mfui-list_color_black mfui-list_weight_regular mfui-list_type_ul"
>
  <ListItem
    disableLeftMargin={false}
  />
</ul>
`;
